--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="colorOrange">#FA9704</color>
     <color name="colorBlack">#000000</color>
     <color name="colorGraay">#C0BFBF</color>
+    <color name="colorGreen">#FF034303</color>
+    <color name="colorAmber">#c2994c</color>
 </resources>
