--- a/app/src/main/res/layout/fragment_entitlement.xml
+++ b/app/src/main/res/layout/fragment_entitlement.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="10dp"
     tools:context=".Entitlement">
     <androidx.appcompat.widget.LinearLayoutCompat
@@ -18,29 +19,35 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-            <ProgressBar
-                android:id="@+id/progress"
-                android:layout_width="90dp"
-                android:layout_height="90dp"/>
-            <TextView
-                android:layout_centerHorizontal="true"
-                android:layout_centerInParent="true"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/colorBlack"
-                android:textSize="15sp"
-                android:text="16 days"/>
-
-        </RelativeLayout>
+            <me.itangqi.waveloadingview.WaveLoadingView
+                android:id="@+id/waveLoadingView"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                app:wlv_borderColor="@color/colorPrimary"
+                app:wlv_borderWidth="3dp"
+                app:wlv_shapeType="circle"
+                app:wlv_round_rectangle="true"
+                app:wlv_triangle_direction="north"
+                app:wlv_titleCenterStrokeColor="@android:color/holo_blue_dark"
+                app:wlv_titleCenterStrokeWidth="3dp"
+                app:wlv_titleCenterColor="@color/colorWhite"
+                app:wlv_titleCenterSize="12sp"
+                app:wlv_titleTopStrokeColor="@android:color/holo_blue_dark"
+                app:wlv_titleTopStrokeWidth="3dp"
+                app:wlv_titleTopColor="@color/colorWhite"
+                app:wlv_titleTopSize="12sp"
+                app:wlv_titleBottomStrokeColor="@android:color/holo_blue_dark"
+                app:wlv_titleBottomStrokeWidth="3dp"
+                app:wlv_titleBottomColor="@color/colorWhite"
+                app:wlv_titleBottomSize="12sp"
+                app:wlv_waveAmplitude="70"
+                app:wlv_waveColor="@color/colorPrimaryDark" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="38dp"
             android:layout_marginStart="10dp"
+            android:layout_marginTop="20dp"
             android:textSize="15sp"
             android:textColor="@color/colorBlack"
             android:text="Annual leave"/>
@@ -190,24 +197,45 @@
                 <RelativeLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
-                    <ProgressBar
-                        android:layout_width="90dp"
-                        android:layout_height="90dp"/>
-                    <TextView
-                        android:layout_centerHorizontal="true"
-                        android:layout_centerInParent="true"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textColor="@color/colorBlack"
-                        android:textSize="15sp"
-                        android:text="16 days"/>
+                    <me.itangqi.waveloadingview.WaveLoadingView
+                        android:id="@+id/waveLoadingView2"
+                        android:layout_width="70dp"
+                        android:layout_height="70dp"
+                        app:wlv_borderColor="@color/colorPrimary"
+                        app:wlv_borderWidth="3dp"
+                        app:wlv_shapeType="circle"
+                        app:wlv_round_rectangle="true"
+                        app:wlv_triangle_direction="north"
+                        app:wlv_titleCenterStrokeColor="@android:color/holo_blue_dark"
+                        app:wlv_titleCenterStrokeWidth="3dp"
+                        app:wlv_titleCenterColor="@color/colorWhite"
+                        app:wlv_titleCenterSize="12sp"
+                        app:wlv_titleTopStrokeColor="@android:color/holo_blue_dark"
+                        app:wlv_titleTopStrokeWidth="3dp"
+                        app:wlv_titleTopColor="@color/colorWhite"
+                        app:wlv_titleTopSize="12sp"
+                        app:wlv_titleBottomStrokeColor="@android:color/holo_blue_dark"
+                        app:wlv_titleBottomStrokeWidth="3dp"
+                        app:wlv_titleBottomColor="@color/colorWhite"
+                        app:wlv_titleBottomSize="12sp"
+                        app:wlv_waveAmplitude="70"
+                        app:wlv_waveColor="@color/colorPrimaryDark"
+                        />
+                    <!--<TextView-->
+                        <!--android:layout_centerHorizontal="true"-->
+                        <!--android:layout_centerInParent="true"-->
+                        <!--android:layout_width="wrap_content"-->
+                        <!--android:layout_height="wrap_content"-->
+                        <!--android:textColor="@color/colorBlack"-->
+                        <!--android:textSize="15sp"-->
+                        <!--android:text="16 days"/>-->
 
                 </RelativeLayout>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="38dp"
+                    android:layout_marginTop="20dp"
                     android:layout_marginStart="10dp"
                     android:textSize="15sp"
                     android:textColor="@color/colorBlack"
