--- a/app/src/main/res/layout/requests_view.xml
+++ b/app/src/main/res/layout/requests_view.xml
@@ -30,7 +30,7 @@
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorOrange"
-       android:text="Pending for cancellation"/>
+       android:text="Pending"/>
     <TextView
         android:id="@+id/requestLeaveType"
         android:layout_width="wrap_content"
