--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".DetailsActivity">
+    tools:context=".ui.DetailsActivity">
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/toolbar_layout"
         android:layout_width="match_parent"
@@ -85,6 +85,7 @@
             android:layout_marginStart="70dp"
             android:orientation="vertical">
             <TextView
+                android:id="@+id/employeeName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="name"/>
@@ -105,6 +106,7 @@
                 android:layout_marginTop="10dp"
                 android:text="type"/>
             <TextView
+                android:id="@+id/applicationStatus"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
@@ -125,12 +127,17 @@
         android:textColor="@color/colorBlack"
         android:text="Comments:"
         android:textSize="15sp"/>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
     <androidx.recyclerview.widget.RecyclerView
         android:layout_marginStart="50dp"
         android:layout_marginTop="10dp"
 
-        android:id="@+id/requests_recyclerView"
+        android:id="@+id/requests_recyclerView_details"
 
+        android:layout_marginBottom="10dp"
         android:layout_width="match_parent"
 
         android:layout_height="wrap_content"/>
@@ -138,7 +145,8 @@
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true">
 
         <com.google.android.material.bottomappbar.BottomAppBar
             android:id="@+id/bottomAppBar"
@@ -157,5 +165,6 @@
             app:fabSize="normal"
             app:layout_anchor="@id/bottomAppBar" />
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
+    </RelativeLayout>
 
 </androidx.appcompat.widget.LinearLayoutCompat>
