--- a/app/src/main/res/layout/comments_details.xml
+++ b/app/src/main/res/layout/comments_details.xml
@@ -1,10 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:padding="20dp"
+
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+
+    android:layout_height="wrap_content"
+
+    app:cardUseCompatPadding="true"
+
+    app:contentPadding="@dimen/activity_half_margin"
+
+    app:cardBackgroundColor="@android:color/white"
+
+    app:cardCornerRadius="@dimen/card_radius"
+
+    app:cardElevation="@dimen/card_elevation">
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -14,7 +26,7 @@
 
             android:id="@+id/products_card_image"
 
-            android:layout_width="50dp"
+            android:layout_width="45dp"
 
             android:layout_alignParentStart="true"
 
@@ -24,7 +36,7 @@
 
             android:src="@drawable/profile"
 
-            android:layout_height="50dp" />
+            android:layout_height="45dp" />
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
             android:layout_gravity="center"
@@ -32,10 +44,9 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
             <TextView
-                android:id="@+id/duration"
+                android:id="@+id/comment"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="20sp"
                 android:text="TextView"/>
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="wrap_content"
@@ -43,13 +54,16 @@
                 android:orientation="horizontal">
                 <TextView
                     android:id="@+id/username"
+                    android:textSize="12sp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="username,"/>
                 <TextView
-                    android:id="@+id/dateToday"
+                    android:id="@+id/dateCommented"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="3dp"
+                    android:textSize="12sp"
                     android:text="20/05/2019"/>
 
             </androidx.appcompat.widget.LinearLayoutCompat>
@@ -59,4 +73,4 @@
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
-</LinearLayout>
+</androidx.cardview.widget.CardView>
