--- a/app/src/main/res/layout/fragment_entitlement.xml
+++ b/app/src/main/res/layout/fragment_entitlement.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="10dp"
-    tools:context=".Entitlement">
+    tools:context=".ui.Entitlement">
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
