--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="@color/colorGraay"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".Home">
+    tools:context=".ui.Home">
 
     <ScrollView
 
@@ -58,7 +58,7 @@
 
                     <TextView
 
-                        android:id="@+id/seller_name_id"
+                        android:id="@+id/employee_username"
 
                         android:layout_marginStart="70dp"
 
@@ -77,10 +77,11 @@
                         android:layout_height="wrap_content" />
 
                     <TextView
+                        android:id="@+id/employeeDomain"
 
                         android:layout_marginStart="70dp"
 
-                        android:layout_below="@id/seller_name_id"
+                        android:layout_below="@id/employee_username"
 
                         android:textColor="@color/colorWhite"
 
@@ -88,7 +89,7 @@
 
                         android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
 
-                        android:text="includes some liitle description about the seller"
+                        android:text="EmployeeDomain"
 
                         android:layout_width="match_parent"
 
@@ -138,47 +139,28 @@
 
                             android:layout_height="wrap_content">
 
-                            <de.hdodenhof.circleimageview.CircleImageView
-
-                                android:id="@+id/products_card_image"
-
-                                android:layout_width="40dp"
-
-                                android:layout_alignParentStart="true"
-
-                                android:layout_alignParentTop="true"
-
-                                android:background="@color/colorPrimary"
-
-
-                                android:tint="@color/colorPrimary"
-
-                                android:src="@drawable/profile"
-
-                                android:layout_height="40dp" />
-
                             <TextView
 
-                                android:id="@+id/products_card_name"
-
-                                android:layout_below="@id/products_card_image"
+                                android:id="@+id/pending_application"
 
                                 android:textColor="@color/colorWhite"
 
                                 android:textStyle="bold"
 
                                 android:text="Pending"
+                                android:gravity="center"
 
                                 android:layout_width="match_parent"
 
                                 android:layout_height="wrap_content" />
 
                             <TextView
-                                android:layout_below="@id/products_card_name"
+                                android:layout_below="@id/pending_application"
 
                                 android:textColor="@color/colorWhite"
 
                                 android:textStyle="normal"
+                                android:gravity="center"
 
                                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
 
@@ -218,46 +200,26 @@
 
                             android:layout_height="wrap_content">
 
-                            <de.hdodenhof.circleimageview.CircleImageView
-
-                                android:id="@+id/sales_card_image"
-
-                                android:layout_width="40dp"
-
-                                android:layout_alignParentStart="true"
-
-                                android:layout_alignParentTop="true"
-
-                                android:background="@color/colorGreen"
-
-
-                                android:tint="@color/colorGreen"
-
-                                android:src="@drawable/profile"
-
-                                android:layout_height="40dp" />
-
                             <TextView
 
-                                android:id="@+id/sales_card_name"
-
-                                android:layout_below="@id/sales_card_image"
+                                android:id="@+id/approved_application"
 
                                 android:textColor="@color/colorWhite"
 
                                 android:textStyle="bold"
 
                                 android:text="Approved"
+                                android:gravity="center"
 
                                 android:layout_width="match_parent"
 
                                 android:layout_height="wrap_content" />
 
                             <TextView
-                                android:layout_below="@id/sales_card_name"
+                                android:layout_below="@id/approved_application"
 
                                 android:textColor="@color/colorWhite"
-
+                                android:gravity="center"
                                 android:textStyle="normal"
 
                                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
@@ -300,34 +262,15 @@
 
                             android:layout_height="wrap_content">
 
-                            <de.hdodenhof.circleimageview.CircleImageView
-
-                                android:id="@+id/inventory_card_image"
-
-                                android:layout_width="40dp"
-
-                                android:layout_alignParentStart="true"
-
-                                android:layout_alignParentTop="true"
-
-                                android:background="@color/colorAmber"
-
-
-                                android:tint="@color/colorAmber"
-
-                                android:src="@drawable/profile"
-
-                                android:layout_height="40dp" />
 
                             <TextView
 
-                                android:id="@+id/inventory_card_name"
-
-                                android:layout_below="@id/inventory_card_image"
+                                android:id="@+id/rejected_application"
 
                                 android:textColor="@color/colorWhite"
 
                                 android:textStyle="bold"
+                                android:gravity="center"
 
                                 android:text="Rejected"
 
@@ -336,7 +279,8 @@
                                 android:layout_height="wrap_content" />
 
                             <TextView
-                                android:layout_below="@id/inventory_card_name"
+                                android:layout_below="@id/rejected_application"
+                                android:gravity="center"
 
                                 android:textColor="@color/colorWhite"
 
