--- a/app/src/main/res/layout/content_activity_details.xml
+++ b/app/src/main/res/layout/content_activity_details.xml
@@ -4,15 +4,16 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.Substitutes">
+    tools:showIn="@layout/activity_details">
     <androidx.recyclerview.widget.RecyclerView
+        android:layout_marginStart="40dp"
         android:layout_marginTop="10dp"
 
-        android:id="@+id/substitutes_recyclerView"
+        android:id="@+id/requests_recyclerView_details"
 
+        android:layout_marginBottom="10dp"
         android:layout_width="match_parent"
 
-        android:layout_height="match_parent"/>
-    <include layout="@layout/content_progress_bar"/>
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
