--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -24,7 +24,7 @@
                     app:cardBackgroundColor="@android:color/transparent">
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="200dp"
+                        android:layout_height="150dp"
                         android:orientation="vertical"
                         android:background="@drawable/login_pages">
 
@@ -39,14 +39,23 @@
                     android:gravity="center"
                     android:text="Login"/>
             </androidx.appcompat.widget.LinearLayoutCompat>
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+            <androidx.appcompat.widget.LinearLayoutCompat
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
             <EditText
                 android:id="@+id/putDomain"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:background="@drawable/edit_design"
                 android:hint="Domain"
-                android:padding="5dp"
                 android:textSize="14sp"
+                android:paddingStart="20dp"
+                android:paddingEnd="5dp"
                 android:elevation="10dp"
                 android:layout_margin="10dp"/>
             <EditText
@@ -56,7 +65,8 @@
                 android:background="@drawable/edit_design"
                 android:hint="Username"
                 android:textSize="14sp"
-                android:padding="5dp"
+                android:paddingStart="20dp"
+                android:paddingEnd="5dp"
                 android:elevation="10dp"
                 android:layout_margin="10dp"/>
             <EditText
@@ -65,8 +75,10 @@
                 android:layout_height="50dp"
                 android:background="@drawable/edit_design"
                 android:hint="Password"
+                android:inputType="textPassword"
                 android:textSize="14sp"
-                android:padding="5dp"
+                android:paddingStart="20dp"
+                android:paddingEnd="5dp"
                 android:elevation="10dp"
                 android:layout_margin="10dp"/>
             <Button
@@ -85,8 +97,11 @@
                 android:textColor="@color/colorWhite"
                 android:layout_marginStart="10dp"
                 android:text="No account yet?Register."/>
+            </androidx.appcompat.widget.LinearLayoutCompat>
+    </ScrollView>
 
         </androidx.appcompat.widget.LinearLayoutCompat>
+    <include layout="@layout/content_progress_bar"/>
 
 
 </RelativeLayout>
