--- a/app/src/main/res/layout/comments_details.xml
+++ b/app/src/main/res/layout/comments_details.xml
@@ -47,6 +47,7 @@
                 android:id="@+id/comment"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="@color/colorOrange"
                 android:text="TextView"/>
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="wrap_content"
@@ -57,12 +58,14 @@
                     android:textSize="12sp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textColor="@color/colorBlack"
                     android:text="username,"/>
                 <TextView
                     android:id="@+id/dateCommented"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="3dp"
+                    android:textColor="@color/colorBlack"
                     android:textSize="12sp"
                     android:text="20/05/2019"/>
 
