--- a/app/src/main/res/layout/fragment_apply.xml
+++ b/app/src/main/res/layout/fragment_apply.xml
@@ -14,6 +14,16 @@
         android:paddingEnd="20dp"
         android:paddingBottom="10dp"
         android:orientation="vertical">
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -140,6 +150,15 @@
             android:layout_marginStart="10dp"
             android:src="@drawable/ic_add_circle_outline_black_24dp"/>
         <TextView
+            android:id="@+id/substituteSelected"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="substitute"
+            android:visibility="gone"
+            android:layout_marginStart="15dp"
+            android:textSize="12sp"
+            android:textColor="@color/colorOrange"/>
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="11sp"
@@ -166,8 +185,11 @@
                 android:hint="Write comment"/>
 
         </androidx.appcompat.widget.LinearLayoutCompat>
+        </androidx.appcompat.widget.LinearLayoutCompat>
+        </ScrollView>
 
         <include layout="@layout/content_activity_apply"/>
+        <include layout="@layout/content_progress_bar"/>
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
