--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="colorGraay">#C0BFBF</color>
     <color name="colorGreen">#FF034303</color>
     <color name="colorAmber">#c2994c</color>
+    <color name="colorTransparent">#00000000</color>
 </resources>
